--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Mock Data</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/index.css">
-  </head>
-  <body>
-    <div class="container">
-      
+
+<head>
+  <title>Mock Data</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+  <div class="mock-container">
+    <div class="mock-content">
+      <p class="mock-title">Mock Data</p>
+      <p class="mock-desc">前后端分离之生成server端随机数据</p>
+      <a class="mock-btn" href="./examples.html" type="button">开始</a>
     </div>
-      <script src="js/vue.js"></script>
-  </body>
+  </div>
+</body>
+
 </html>
